@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/oxygen-icons
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/oxygen-icons/ChangeLog,v 1.15 2009/11/09 00:16:50 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/oxygen-icons/ChangeLog,v 1.16 2009/11/29 16:16:41 armin76 Exp $
+
+  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> oxygen-icons-4.3.3.ebuild:
+  Add ~sparc
 
   08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
   -oxygen-icons-4.3.2-r1.ebuild:
